# BitCrypt

./: .gitignore  CMakeLists.txt  README.md  zipLinux.sh
res/: icon.icns  icon.xpm
res/unx/: Installation Instructions.txt  autoInstall.sh  bitcrypt.desktop
src/: CMakeLists.txt  main.cc  main.cpp
src/AES/: AES.cc  AES.cpp  AES.hh  CMakeLists.txt
src/Argon2/: CMakeLists.txt
src/Argon2/blake2/: CMakeLists.txt
src/Crypt/: BitCrypt.cc  BitCrypt.hh  CMakeLists.txt
src/HashTools/: bcrypt.h
src/Util/: CMakeLists.txt  FileEditor.cc  FileEditor.hh  FileEditor2.cc  FileEditor2.hh
src/app/: App.cc  App.hh  CMakeLists.txt  MainFrame.cc  MainFrame.hh
tests/: main.cc
